--- a/search/style.css
+++ b/search/style.css
@@ -1,5 +1,5 @@
 main {
-  margin: 2rem 0;
+  padding: 2rem 0;
 }
 
 #search-container {
