--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+main {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  overflow-x: none;
+  height: 100vh;
+}
+
+section {
+  min-height: 90vh;
+  scroll-snap-align: center;
+}
+
 #hero-container {
   display: flex;
   max-width: min(90vw, 50rem);
